<resources>
    <string name="app_name">Service</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="destination">Destination</string>
    <string name="route_number">Route number</string>
    <string name="hour">Hour</string>
    <string name="minutes">Minutes</string>
    <string name="create_route">Create route</string>
    <string name="update_route">Update route</string>
    <string name="incorrect_data">Incorrect data</string>
    <string name="arrival_time">Arrival time</string>
    <string name="departure_time">Departure time</string>
</resources>